hubUrl fix